--- a/rideSupport_profileCompany_ms/.env
+++ b/rideSupport_profileCompany_ms/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:g1pQJeMqGIc3WUd0qC0TBXIMriaVV+YmlDZ0vJR8J7s=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,7 +9,7 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=rideSupport_profileCompany_db
 DB_USERNAME=root
 DB_PASSWORD=password
 
